cleanup eks process

--- a/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/deployment.yaml
+++ b/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/deployment.yaml
@@ -1,9 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mi-aplicacion
-  labels:
-    app: mi-aplicacion
+  name: mi-aplicacion-deployment
 spec:
   replicas: 3
   selector:
@@ -15,9 +13,15 @@ spec:
         app: mi-aplicacion
     spec:
       containers:
-      - name: mi-aplicacion
-        image: 356403663115.dkr.ecr.us-east-1.amazonaws.com/mi-aplicacion:mi-aplicacion
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 4500
-          protocol: TCP
+        - name: mi-aplicacion
+          image: $(IMAGE_URI)
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 4500
+              protocol: TCP
+          env:
+            - name: IMAGE_URI
+              valueFrom:
+                configMapKeyRef:
+                  name: config-mappings
+                  key: imageUri
