--- a/eks/mi-aplicacion/mi-aplicacion/Aws/CloudFormation/api/template.yml
+++ b/eks/mi-aplicacion/mi-aplicacion/Aws/CloudFormation/api/template.yml
@@ -17,102 +17,16 @@ Parameters:
     ConstraintDescription: must be a dev, test or prod
 
 Resources:
-  # IAM ROLES SECTION
-  # CodeBuildRole:
-  #   Type: AWS::IAM::Role
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Version: "2012-10-17"
-  #       Statement:
-  #         - Effect: Allow
-  #           Principal:
-  #             Service:
-  #               - "codepipeline.amazonaws.com"
-  #               - "codebuild.amazonaws.com"
-  #               - "codedeploy.amazonaws.com"
-  #               - "s3.amazonaws.com"
-  #               - "kms.amazonaws.com"
-  #               - "eks.amazonaws.com"
-  #               - "ecr.amazonaws.com"
-  #               - "ec2.amazonaws.com"
-  #               - "iam.amazonaws.com"
-  #           Action:
-  #             - "sts:AssumeRole"
-  #     Policies:
-  #       - PolicyName: !Sub ${EnvironmentType}-${ApplicationName}-codebuild-policy
-  #         PolicyDocument:
-  #           Version: "2012-10-17"
-  #           Statement:
-  #             - Effect: Allow
-  #               Action:
-  #                 - "s3:*"
-  #               Resource: "*"
-  #             - Effect: Allow
-  #               Action:
-  #                 - "secretsmanager:GetSecretValue"
-  #               Resource: "arn:aws:secretsmanager:*:*:secret:build/*"
-  #             - Effect: Allow
-  #               Action:
-  #                 - "logs:*"
-  #                 - "cloudformation:*"
-  #                 - "kms:*"
-  #                 - "ecr:*"
-  #                 - "ec2:*"
-  #                 - "eks:*"
-  #                 - "s3:*"
-  #                 - "codepipeline:*"
-  #                 - "codebuild:*"
-  #                 - "codedeploy:*"
-  #               Resource:
-  #                 - "*"
-  # CodePipeLineRole:
-  #   Type: AWS::IAM::Role
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Version: "2012-10-17"
-  #       Statement:
-  #         - Effect: Allow
-  #           Principal:
-  #             Service:
-  #               - "codepipeline.amazonaws.com"
-  #               - "codebuild.amazonaws.com"
-  #               - "codedeploy.amazonaws.com"
-  #               - "cloudformation.amazonaws.com"
-  #               - "s3.amazonaws.com"
-  #               - "kms.amazonaws.com"
-  #               - "eks.amazonaws.com"
-  #               - "ecr.amazonaws.com"
-  #               - "ec2.amazonaws.com"
-  #           Action:
-  #             - "sts:AssumeRole"
-  #     Policies:
-  #       - PolicyName: !Sub ${EnvironmentType}-${ApplicationName}-codepipeline-policy
-  #         PolicyDocument:
-  #           Version: "2012-10-17"
-  #           Statement:
-  #             - Effect: Allow
-  #               Action:
-  #                 - "codestar-connections:*"
-  #                 - "codebuild:*"
-  #                 - "s3:*"
-  #                 - "cloudformation:*"
-  #                 - "cloudwatch:*"
-  #                 - "iam:PassRole"
-  #                 - "ecr:*"
-  #                 - "eks:*"
-  #                 - "ec2:*"
-  #               Resource:
-  #                 - "*"
   EksClusterRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub "${ApplicationName}-eks-role-${EnvironmentType}"
+      RoleName: !Sub "${ApplicationName}-${EnvironmentType}-eks-role"
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
           - Effect: Allow
             Principal:
-              AWS: !GetAtt CodeBuildRole.Arn
+              #AWS: !GetAtt CodeBuildRole.Arn
               Service: 
                 - eks.amazonaws.com
                 - cloudformation.amazonaws.com
@@ -129,58 +43,128 @@ Resources:
   ECRRepository:
     Type: AWS::ECR::Repository
     Properties:
-      RepositoryName: !Sub "${ApplicationName}-repo-${EnvironmentType}"
-  # VPC creation for EKS cluster
+      RepositoryName: !Sub "${ApplicationName}-${EnvironmentType}-repo"
+
   VPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: 10.0.0.0/16
+      CidrBlock: "10.0.0.0/16"
       EnableDnsSupport: true
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Sub "${ApplicationName}VPC-${EnvironmentType}"
-  # First public subnet us-east-2a
+          Value: !Sub ${ApplicationName}-${EnvironmentType}-VPC
+
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId:
+        Ref: VPC
+      InternetGatewayId:
+        Ref: InternetGateway
+
   PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: us-east-2a
-      CidrBlock: 10.0.1.0/24
+      VpcId:
+        Ref: VPC
+      AvailabilityZone: !Select [0, !GetAZs ""]
+      CidrBlock: "10.0.1.0/24"
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub "${ApplicationName}-PublicSubnet1-${EnvironmentType}"
-  # Second public subnet us-east-2b
+          Value: !Sub ${ApplicationName}-${EnvironmentType}-PublicSubnet1
+
   PublicSubnet2:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: us-east-2b
-      CidrBlock: 10.0.2.0/24
+      VpcId:
+        Ref: VPC
+      AvailabilityZone: !Select [1, !GetAZs ""]
+      CidrBlock: "10.0.2.0/24"
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub "${ApplicationName}-PublicSubnet2-${EnvironmentType}"
-  # EKS security group
-  EKSSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for EKS cluster
-      VpcId: !Ref VPC
-  # EKS Cluster
+          Value: !Sub ${ApplicationName}-${EnvironmentType}-PublicSubnet2
+
   EKSCluster:
     Type: AWS::EKS::Cluster
     Properties:
-      Name: !Sub "${ApplicationName}-cluster-${EnvironmentType}"
+      Name: !Sub ${ApplicationName}-${EnvironmentType}-Cluster
       RoleArn: !GetAtt EksClusterRole.Arn
-      ResourcesVpcConfig:
-        SubnetIds:
-          - !Ref PublicSubnet1
-          - !Ref PublicSubnet2
-        SecurityGroupIds:
-          - !Ref EKSSecurityGroup
-      Version: "1.27" # Check versions
+      Version: 1.27
+
+  NodeInstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      Path: /
+      Roles:
+        - Ref: NodeInstanceRole
+
+  NodeInstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: /
+      Policies:
+        - PolicyName: EKSNodePolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - eks:DescribeNodegroup
+                  - eks:ListNodegroups
+                  - eks:DescribeCluster
+                  - eks:AccessKubernetesApi
+                  - eks:GetToken
+                Resource: "*"
+
+  NodeSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: "Security group for EKS nodes"
+      VpcId:
+        Ref: VPC
+
+  NodeSecurityGroupIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId:
+        Ref: NodeSecurityGroup
+      IpProtocol: tcp
+      FromPort: 0
+      ToPort: 65535
+      CidrIp: "0.0.0.0/0"
+
+  NodeGroup:
+    Type: AWS::EKS::Nodegroup
+    Properties:
+      ClusterName:
+        Ref: EKSCluster
+      NodegroupName: !Sub ${ApplicationName}-${EnvironmentType}-NodeGroup
+      NodeRole:
+        Fn::GetAtt:
+          - NodeInstanceProfile
+          - Arn
+      Subnets:
+        - Ref: PublicSubnet1
+        - Ref: PublicSubnet2
+      AmiType: "AL2_x86_64"
+      DiskSize: 20
+      InstanceTypes:
+        - "m5.large" # Adjust the instance type as needed
 
 Outputs:
   RepositoryName:
@@ -189,12 +173,6 @@ Outputs:
   ClusterName:
     Description: Name of the EKS Cluster
     Value: !Ref EKSCluster
-  # CodePipelineRoleArn:
-  #   Description: CodePipelineRole
-  #   Value: !GetAtt CodePipeLineRole.Arn
-  # CodeBuildRoleArn:
-  #   Description: CodeBuildRole Arn
-  #   Value: !GetAtt CodeBuildRole.Arn
   EksClusterRoleArn:
     Description: CodeDeployRole Arn
     Value: !GetAtt EksClusterRole.Arn
