--- a/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/service.yaml
+++ b/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/service.yaml
@@ -1,11 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mi-aplicacion-service
+  name: eks-mi-aplicacion-service
+  namespace: eks-mi-aplicacion
+  labels:
+    app: eks-mi-aplicacion
 spec:
   type: LoadBalancer
   selector:
-    app: mi-aplicacion
+    app: eks-mi-aplicacion
   ports:
     - protocol: TCP
       port: 80
