--- a/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/service.yaml
+++ b/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eks-mi-aplicacion-service
-  namespace: eks-mi-aplicacion
+  name: mi-aplicacion-test-service
+  namespace: mi-aplicacion-test
   labels:
-    app: eks-mi-aplicacion
+    app: mi-aplicacion-test
 spec:
   type: LoadBalancer
   selector:
-    app: eks-mi-aplicacion
+    app: mi-aplicacion-test
   ports:
     - protocol: TCP
       port: 80
