--- a/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/deployment.yaml
+++ b/eks/mi-aplicacion/mi-aplicacion/Aws/Kubernetes/test/deployment.yaml
@@ -23,7 +23,7 @@ spec:
                   name: config-mappings
                   key: imageUri
           name: mi-aplicacion
-          image: IMAGE_URI
+          image: IMAGEURI
           imagePullPolicy: Always
           ports:
             - containerPort: 3300
